--- a/index.html
+++ b/index.html
@@ -5,11 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A footwear website to illustrate responsiveness">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="./styles.css"/>
     <script src="https://kit.fontawesome.com/caf80e7adc.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title> E-commerce product page</title>
 </head>
 <body>
-    
+    <nav>
+    <div class="logo">
+     <!--<img src="./images/bars-solid.svg"  alt="bars" width="18px" id="bars"/>-->
+      <img src="./images/logo.svg" alt="logo"/> 
+      </div>
+      <div class="list">
+        <ul>
+          <li>Collections</li>
+           <li>Men</li> 
+           <li>Women</li> 
+            <li>About</li> 
+            <li>Contact</li> 
+        </ul>
+        <img src="./images/icon-cart.svg" alt="cart"/>
+        <img src="./images/image-avatar.png" alt="avatar" width="26px"/>
+      </div>
+    </nav>
+    <hr class="line"/>
 </body>
 </html>
