added product images

--- a/index.html
+++ b/index.html
@@ -29,5 +29,24 @@
       </div>
     </nav>
     <hr class="line"/>
+    <div class="main">
+        <img src="./images/image-product-1.jpg" alt="Shoes on display" width="300px" id="product1"/>
+        <h3>
+            Sneaker Company
+        </h3>
+        <h1>
+            Fall Limited Edition Sneakers
+        </h1>
+        <p>
+            These low-profile sneakers are your perfect casual wear companion. Featuring a durable rubber outer sole, they’ll withstand everything the weather can offer.
+        </p>
+    </div>
+    <div class="small-shoes">
+        <img src="./images/image-product-1-thumbnail.jpg"  alt="shoes">
+        <img src="./images/image-product-2-thumbnail.jpg" alt="shoes"/>
+        <img src="./images/image-product-3-thumbnail.jpg"  alt="shoes">
+        <img src="./images/image-product-4-thumbnail.jpg"  alt="shoes">
+    </div>
+    <button type="button">Add to cart</button>
 </body>
 </html>
