--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
     <title> E-commerce product page</title>
 </head>
 <body>
+
     <nav>
      <img src="./images/bars-solid.svg"  alt="bars" width="18px" id="bars"/>
-      <img src="./images/logo.svg" alt="logo"/> 
+      <img src="./images/logo.svg" alt="logo" id="logo"/> 
       
       <div class="list">
         <ul>
-          <li>Collections</li>
-           <li>Men</li> 
-           <li>Women</li> 
-            <li>About</li> 
-            <li>Contact</li> 
+          <li class="items">Collections</li>
+           <li class="items">Men</li> 
+           <li class="items">Women</li> 
+            <li class="items">About</li> 
+            <li class="items">Contact</li> 
         <li class="nav-img"><img src="./images/icon-cart.svg" alt="cart" /></li>
-        <li><img src="./images/image-avatar.png" alt="avatar" width="35px"/> </li>
-        </ul>  
+        <li><img src="./images/image-avatar.png" alt="avatar" width="35px"/></li>   
+    </ul>  
     </div>
     </nav>
-
     <hr/>
 
 <div class="container">
