--- a/index.html
+++ b/index.html
@@ -14,21 +14,17 @@
 
     <nav>
      <img src="./images/bars-solid.svg"  alt="bars" width="18px" id="bars"/>
-      <img src="./images/logo.svg" alt="logo" id="logo"/> 
-      
-      <div class="list">
-        <ul>
-          <li class="items">Collections</li>
-           <li class="items">Men</li> 
-           <li class="items">Women</li> 
-            <li class="items">About</li> 
-            <li class="items">Contact</li> 
-        <li class="nav-img"><img src="./images/icon-cart.svg" alt="cart" /></li>
-        <li><img src="./images/image-avatar.png" alt="avatar" width="35px"/></li>   
-    </ul>  
-    </div>
+      <img src="./images/logo.svg" alt="logo" id="logo"/>  
+          <p class="items">Collections</p>
+           <p class="items">Men</p> 
+           <p class="items">Women</p> 
+            <p class="items">About</p> 
+            <p class="items">Contact</p> 
+        <span class="space"></span> 
+        <p class="cart"><img src="./images/icon-cart.svg" alt="cart" /></p>
+        <p class="profile"><img src="./images/image-avatar.png" alt="avatar" width="35px"/></p>   
     </nav>
-    <hr/>
+ 
 
 <div class="container">
     <div class="main">
