--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
                 $250.00 
             </p>
         </h2>
+        <div class="buttons">
         <button type="button" id="add-button"><img src="./images/icon-minus.svg" alt="icon" id="minus"> 0
             <img src="./images/icon-plus.svg" alt="icon" id="plus"/>
         </button>
         <button type="button"><img src="./images/icon-cart.svg" alt="cart" id="cart-button"/>Add to cart</button>
+    </div>
     </div>
 </div>
 
